// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get default presets functions getSpacingInlineHorizontal for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineHorizontal for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineHorizontal for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineHorizontal for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineHorizontal for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 2`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineHorizontal for responsive tokens when props.overrides is set with breakpoint object with override path: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineHorizontal for responsive tokens with no override path provided, with and without token type at the end: default:no-path-end 1`] = `
Object {
  "marginRight": "",
}
`;

exports[`get default presets functions getSpacingInlineHorizontal for responsive tokens with no override path provided, with and without token type at the end: default:with-path-end 1`] = `
Object {
  "marginRight": "",
}
`;

exports[`get default presets functions getSpacingInlineVertical for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineVertical for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineVertical for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineVertical for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineVertical for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 2`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineVertical for responsive tokens when props.overrides is set with breakpoint object with override path: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInlineVertical for responsive tokens with no override path provided, with and without token type at the end: default:no-path-end 1`] = `
Object {
  "marginBottom": "",
}
`;

exports[`get default presets functions getSpacingInlineVertical for responsive tokens with no override path provided, with and without token type at the end: default:with-path-end 1`] = `
Object {
  "marginBottom": "",
}
`;

exports[`get default presets functions getSpacingInset for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "padding": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInset for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "padding": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "padding": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "padding": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 2`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "padding": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInset for responsive tokens when props.overrides is set with breakpoint object with override path: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "padding": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInset for responsive tokens with no override path provided, with and without token type at the end: default:no-path-end 1`] = `
Object {
  "@media screen and (max-width: 959px)": Object {
    "padding": "theDefaultToken-value-space",
  },
  "@media screen and (min-width: 960px)": Object {
    "padding": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingInset for responsive tokens with no override path provided, with and without token type at the end: default:with-path-end 1`] = `
Object {
  "@media screen and (max-width: 959px)": Object {
    "padding": "theDefaultToken-value-space",
  },
  "@media screen and (min-width: 960px)": Object {
    "padding": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackHorizontal for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackHorizontal for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackHorizontal for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackHorizontal for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackHorizontal for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 2`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackHorizontal for responsive tokens when props.overrides is set with breakpoint object with override path: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginBottom": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackHorizontal for responsive tokens with no override path provided, with and without token type at the end: default:no-path-end 1`] = `
Object {
  "marginBottom": "",
}
`;

exports[`get default presets functions getSpacingStackHorizontal for responsive tokens with no override path provided, with and without token type at the end: default:with-path-end 1`] = `
Object {
  "marginBottom": "",
}
`;

exports[`get default presets functions getSpacingStackVertical for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackVertical for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackVertical for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackVertical for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackVertical for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 2`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackVertical for responsive tokens when props.overrides is set with breakpoint object with override path: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "marginRight": "theOverrideToken-value-space",
  },
}
`;

exports[`get default presets functions getSpacingStackVertical for responsive tokens with no override path provided, with and without token type at the end: default:no-path-end 1`] = `
Object {
  "marginRight": "",
}
`;

exports[`get default presets functions getSpacingStackVertical for responsive tokens with no override path provided, with and without token type at the end: default:with-path-end 1`] = `
Object {
  "marginRight": "",
}
`;

exports[`get default presets functions getTypographyPreset for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
}
`;

exports[`get default presets functions getTypographyPreset for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
}
`;

exports[`get default presets functions getTypographyPreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
}
`;

exports[`get default presets functions getTypographyPreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
}
`;

exports[`get default presets functions getTypographyPreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 2`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
}
`;

exports[`get default presets functions getTypographyPreset for responsive tokens when props.overrides is set with breakpoint object with override path: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
  "@media screen and (min-width: 480px) and (max-width: 1439px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
}
`;

exports[`get default presets functions getTypographyPreset for responsive tokens with no override path provided, with and without token type at the end: default:no-path-end 1`] = `
Object {
  "@media screen and (max-width: 959px)": Object {
    "fontFamily": "theDefaultToken-value-typographyPresets",
  },
  "@media screen and (min-width: 960px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
}
`;

exports[`get default presets functions getTypographyPreset for responsive tokens with no override path provided, with and without token type at the end: default:with-path-end 1`] = `
Object {
  "@media screen and (max-width: 959px)": Object {
    "fontFamily": "theDefaultToken-value-typographyPresets",
  },
  "@media screen and (min-width: 960px)": Object {
    "fontFamily": "theOverrideToken-value-typographyPresets",
  },
}
`;
